syntax = "proto3";

package microshopping;
option go_package = "./proto; microshopping";

//-------------------广告访问----------------------
service AdService {
    rpc GetAds(AdRequest) returns (AdResponse) {}
}

message Ad {
    string redirect_url = 1;
    string text = 2;
}

message AdRequest {
    repeated string context_keys = 1;
}

message AdResponse {
    repeated Ad ads = 1;
}