syntax = "proto3";

package microshopping;

option go_package = "./proto;microshopping";

import "google/protobuf/empty.proto";

//------------------购物车服务 cart service--------------------------
service CartService{
    rpc AddItem(AddItemRequest) returns (google.protobuf.Empty) {}
    rpc GetCart(GetCartRequest) returns (Cart){}
    rpc EmptyCart(EmptyCartRequest) returns (google.protobuf.Empty) {}
}

message CartItem{
    string product_id = 1;
    int32 quantity = 2;
}

message AddItemRequest{
    string user_id = 1;
    CartItem item = 2;
}


message GetCartRequest{
    string user_id = 1;
}

message Cart{
    string user_id = 1;
    repeated CartItem items = 2;
}

message EmptyCartRequest{
    string user_id = 1;
}





